--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -16,7 +16,6 @@ FLAGS    := -Wall -Wextra -Werror -std=c++98
 ################################################################################
 
 SRCS        :=      main.cpp \
-                          Span.cpp \
                           
 OBJS        := ${SRCS:.cpp=.o}
 
@@ -55,6 +54,13 @@ fclean:		clean
 
 re:			fclean all
 
-.PHONY:		all clean fclean re
+################################################################################
+#                                 PROGRAM'S SRCS                               #
+################################################################################
 
+SRCS        :=      main.cpp \
+                          
+OBJS        := ${SRCS:.cpp=.o}
 
+.cpp.o:
+	${CC} ${FLAGS} -c $< -o ${<:.cpp=.o}
